--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DesafioMaino</title>
+    <title>Gerador de Relatórios XML</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,17 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <header>
+      </header>
+      <div class="flash-messages">
+        <%= render 'layouts/flash_messages' %>
+      </div>
+      <main>
+        <%= yield %>
+      </main>
+      <footer>
+      </footer>
+    </div>
   </body>
 </html>
